# DraconicEngine

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
Engine/cpp/Runtime/: CMakeLists.txt  Draconic.cppm
Engine/cpp/Runtime/Animation/: AnimationModule.cppm  Clip.cppm  ClipTests.test.cpp  Easing.cppm  EasingTypeTests.test.cpp  Graph.cppm  GraphTests.test.cpp  Player.cppm  PlayerTests.test.cpp  Pose.cppm  PoseTests.test.cpp  Sampler.cppm  SamplerTests.test.cpp  Skeleton.cppm  SkeletonTests.test.cpp
Engine/cpp/Runtime/Core/: CMakeLists.txt  Core.cppm
Engine/cpp/Runtime/Core/Definitions/: Definitions.cppm  Status.cppm
Engine/cpp/Runtime/Core/IO/: FileSystem.cpp  FileSystem.cppm  IO.cppm  ImageLoader.cpp  ImageLoader.cppm
Engine/cpp/Runtime/Core/Math/: AABB.cppm  AABB.test.cpp  Color.cppm  Color.test.cpp  Constants.cppm  Easings.cppm  Easings.test.cpp  Functions.cppm  Math.cppm  Math.test.cpp  Matrix4.cpp  Matrix4.cppm  Packed.cppm  Packed.test.cpp  Quaternion.cppm  Transform.cpp  Transform.cppm  Types.cppm  TypesCommon.cppm  Vector2.cppm  Vector3.cppm  Vector4.cppm
Engine/cpp/Runtime/Core/Memory/: Allocator.cpp  BumpAllocator.cpp  BumpAllocator.test.cpp  PageAllocator.cpp  TrackingAllocator.test.cpp
Engine/cpp/Runtime/Platform/impl/: CMakeLists.txt
Engine/cpp/Runtime/Profiler/: Profiler.cppm  Profiler.h  ProfilerTests.test.cpp
Engine/cpp/Runtime/Rendering/: CMakeLists.txt  rendering.cppm
Engine/cpp/Runtime/Rendering/Geometry/: GeometryModule.cppm  GeometryTests.test.cpp  IndexBuffer.cppm  Mesh.cppm  Primitives.cppm  Types.cppm
Engine/cpp/Runtime/Rendering/Graphics/: Graphics.cppm  GraphicsGpu.cppm  GraphicsNull.cppm  GraphicsRhi.test.cpp
Engine/cpp/Runtime/Rendering/Image/: AtlasBuilder.cppm  Image.cppm  ImageData.cppm  ImageDataTests.test.cpp  ImageManipulationTests.test.cpp  ImageModule.cppm  NineSlice.cppm  NormalMapTests.test.cpp  PixelFormat.cppm
Engine/cpp/Runtime/Rendering/Material/: Material.cppm
Engine/cpp/Runtime/Rendering/Materials/: Material.cppm  MaterialBuilder.cppm  MaterialInstance.cppm  MaterialSystem.cppm  MaterialsModule.cppm  MaterialsTests.test.cpp  PipelineConfig.cppm  Types.cppm
Engine/cpp/Runtime/Rendering/Mesh/: Mesh.cpp  Mesh.cppm
Engine/cpp/Runtime/Rendering/Model/: Model.cppm  ModelAnimation.cppm  ModelBone.cppm  ModelMaterial.cppm  ModelMesh.cppm  ModelMeshPart.cppm  ModelModule.cppm  ModelSkin.cppm  ModelTests.test.cpp  ModelTexture.cppm  ModelVertex.cppm  VertexFormat.cppm
Engine/cpp/Runtime/Rendering/QuadRenderer/: QuadRenderer.cpp  QuadRenderer.cppm
Engine/cpp/Runtime/Rendering/RHI/: Buffers.cpp  Commands.cpp  Commands.cppm  Core.cpp  Descriptors.cppm  Device.cppm  Enums.cppm  ExtDescriptors.cppm  Extensions.cppm  Forward.cppm  Log.cppm  Pipelines.cpp  Queue.cppm  RHI.cppm  Resources.cppm  RhiModule.cppm  (+6 more)
Engine/cpp/Runtime/Scene/: CMakeLists.txt
Engine/cpp/Runtime/Shell/: Input.cppm  Shell.cppm  Window.cppm
Engine/cpp/runtime/: CMakeLists.txt
Engine/cpp/runtime/Platform/: platform.cppm
Engine/cpp/runtime/core/: CMakeLists.txt
Engine/cpp/runtime/rendering/: CMakeLists.txt
Engine/cpp/runtime/scene/: CMakeLists.txt
Samples/cpp/: CMakeLists.txt  RenderSample.cpp  rendering.cpp
Samples/cpp/RHI/: CMakeLists.txt
Samples/cpp/RHI/Framework/: DepthBuffer.cppm  Framework.cppm  SampleApp.cppm  ShaderHelpers.cppm
Samples/cpp/RHI/Sample001_Triangle/: CMakeLists.txt  Main.cpp
Samples/cpp/RHI/Sample002_Textures/: CMakeLists.txt  Main.cpp
Samples/cpp/RHI/Sample003_UniformBuffers/: CMakeLists.txt  Main.cpp
Samples/cpp/RHI/Sample004_Compute/: CMakeLists.txt  Main.cpp
Samples/cpp/RHI/Sample005_BindGroups/: CMakeLists.txt  Main.cpp
Samples/cpp/RHI/Sample006_Blending/: CMakeLists.txt  Main.cpp
Samples/cpp/RHI/Sample007_Instancing/: CMakeLists.txt  Main.cpp
Samples/cpp/RHI/Sample008_DepthBuffer/: CMakeLists.txt  Main.cpp
Samples/cpp/RHI/Sample009_Mipmaps/: CMakeLists.txt  Main.cpp
Samples/cpp/RHI/Sample010_MSAA/: CMakeLists.txt  Main.cpp
Samples/cpp/RHI/Sample011_MRT/: CMakeLists.txt  Main.cpp
Samples/cpp/RHI/Sample012_Wireframe/: CMakeLists.txt  Main.cpp
Samples/cpp/RHI/Sample013_BorderSampler/: CMakeLists.txt  Main.cpp
Samples/cpp/RHI/Sample014_Blit/: CMakeLists.txt  Main.cpp
Samples/cpp/RHI/Sample015_Queries/: CMakeLists.txt  Main.cpp
Samples/cpp/RHI/Sample016_Readback/: CMakeLists.txt  Main.cpp
Samples/cpp/RHI/Sample017_MultiQueue/: CMakeLists.txt  Main.cpp
Samples/cpp/RHI/Sample018_Bindless/: CMakeLists.txt  Main.cpp
Samples/cpp/RHI/Sample019_BatchUpload/: CMakeLists.txt  Main.cpp
Samples/cpp/RHI/Sample020_MeshShaders/: CMakeLists.txt  Main.cpp
Samples/cpp/RHI/Sample021_RayTracing/: CMakeLists.txt  Main.cpp
Samples/cpp/RHI/Sample022_StencilOutline/: CMakeLists.txt  Main.cpp
Samples/cpp/RHI/Sample023_CubeMap/: CMakeLists.txt  Main.cpp
Samples/cpp/RHI/Sample024_OcclusionQuery/: CMakeLists.txt  Main.cpp
Samples/cpp/RHI/Sample025_MultiDrawIndirect/: CMakeLists.txt  Main.cpp
Samples/cpp/RHI/Sample026_DynamicOffsets/: CMakeLists.txt  Main.cpp
Samples/cpp/RHI/Sample027_3DTexture/: CMakeLists.txt  Main.cpp
Samples/cpp/RHI/Sample028_ProceduralRT/: CMakeLists.txt  Main.cpp
Samples/cpp/RHI/Sample029_ResolveTexture/: CMakeLists.txt  Main.cpp
Samples/cpp/RHI/Sample030_RenderBundles/: CMakeLists.txt  Main.cpp
Samples/cpp/RHI/Smoketest/: CMakeLists.txt  Main.cpp
Samples/cpp/Render/: CMakeLists.txt  RenderSample.cpp
engine/native/: CMakeLists.txt
engine/native/core/: CMakeLists.txt
engine/native/core/definitions/: definitions.cppm
engine/native/core/math/: math.cppm
engine/native/core/memory/: bumpAllocator.cpp  bumpAllocator.cppm  bumpAllocator.test.cpp  fixedAllocator.cppm  pageAllocator.cpp  pageAllocator.cppm  trackingAllocator.cpp
engine/native/main/: main.cpp
engine/native/rendering/: CMakeLists.txt
engine/native/rendering/rhi/: core.cpp  rhi.cppm  rhi_bgfx.cpp  uniform_registry.cppm
engine/native/rendering/shaders/: fs.sc  vs.sc
engine/native/scene/: CMakeLists.txt
engine/native/scene/transform/: transform.cppm
(+180 files in other folders)
