add_modules_library(rhi)
add_modules_library(rendergraph)
add_modules_library(renderer)
add_modules_library(mesh)
add_modules_library(material)
add_modules_library(quad_renderer)

target_link_libraries(rhi PUBLIC core Math memory Platform bgfx bx)
target_link_libraries(rendergraph PUBLIC rhi bx)
target_link_libraries(mesh PUBLIC memory rhi Math core)
target_link_libraries(material PUBLIC rhi)
target_link_libraries(quad_renderer PUBLIC rhi rendergraph bgfx bx)
target_link_libraries(renderer PUBLIC core Math rhi rendergraph mesh quad_renderer material bgfx bx)